--- a/src/main/resources/com/example/mytool/add-message-modal.fxml
+++ b/src/main/resources/com/example/mytool/add-message-modal.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -13,48 +17,73 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.AddMessageModalController">
     <children>
-        <TabPane layoutX="23.0" layoutY="8.0" prefHeight="375.0" prefWidth="569.0" tabClosingPolicy="UNAVAILABLE">
-            <tabs>
-                <Tab text="Contents">
-                    <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                            <children>
-                                <GridPane layoutY="12.0" prefHeight="332.0" prefWidth="569.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="12.0">
-                                    <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="91.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0" minWidth="10.0" prefWidth="478.0" />
-                                    </columnConstraints>
-                                    <rowConstraints>
-                                        <RowConstraints maxHeight="104.0" minHeight="0.0" prefHeight="54.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="112.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="103.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="129.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
-                                    </rowConstraints>
-                                    <children>
-                                        <Label text="Key" />
-                                        <Label text="Value" GridPane.rowIndex="1" />
-                                        <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                                            <children>
-                                                <Button fx:id="addBtn" mnemonicParsing="false" onAction="#add" text="Add" />
-                                                <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-                                            </children>
-                                        </HBox>
-                                        <TextArea fx:id="key" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-                                        <TextArea fx:id="value" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextArea fx:id="avroSchema" disable="true" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <Label layoutX="10.0" layoutY="114.0" text="Avro Schema" visible="false" GridPane.rowIndex="2" />
-                                    </children>
-                                </GridPane>
-                            </children>
+      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <items>
+              <TabPane prefHeight="384.0" prefWidth="593.0" tabClosingPolicy="UNAVAILABLE">
+                  <tabs>
+                      <Tab text="Contents">
+                          <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                  <children>
+                                      <GridPane layoutY="12.0" prefHeight="332.0" prefWidth="569.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="12.0">
+                                          <columnConstraints>
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="91.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0" minWidth="10.0" prefWidth="478.0" />
+                                          </columnConstraints>
+                                          <rowConstraints>
+                                              <RowConstraints maxHeight="104.0" minHeight="0.0" prefHeight="54.0" vgrow="SOMETIMES" />
+                                              <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="112.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="103.0" vgrow="SOMETIMES" />
+                                              <RowConstraints maxHeight="129.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
+                                          </rowConstraints>
+                                          <children>
+                                              <Label text="Key" />
+                                              <Label text="Value" GridPane.rowIndex="1" />
+                                              <TextArea fx:id="key" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+                                              <TextArea fx:id="value" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <TextArea fx:id="schema" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <Label layoutX="10.0" layoutY="114.0" text="Schema" GridPane.rowIndex="2" />
+                                          </children>
+                                      </GridPane>
+                                  </children>
+                              </AnchorPane>
+                          </content>
+                      </Tab>
+                      <Tab disable="true" text="Headers">
+                          <content>
+                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TableView layoutX="14.0" layoutY="7.0" prefHeight="319.5" prefWidth="598.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columns>
+                                  <TableColumn prefWidth="180.0" text="Key" />
+                                  <TableColumn prefWidth="413.0" text="Value" />
+                                </columns>
+                              </TableView>
+                           </children>
                         </AnchorPane>
-                    </content>
-                </Tab>
-                <Tab text="Headers">
-                    <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                    </content>
-                </Tab>
-            </tabs>
-        </TabPane>
+                          </content>
+                      </Tab>
+                  </tabs>
+              </TabPane>
+          <AnchorPane maxHeight="40.0" minHeight="0.0" minWidth="0.0" prefHeight="40.0" prefWidth="593.0">
+               <children>
+                            <HBox prefHeight="40.0" prefWidth="598.0" spacing="10.0">
+                                <children>
+                                    <Button fx:id="okBtn" mnemonicParsing="false" onAction="#ok" prefHeight="26.0" prefWidth="60.0" text="OK">
+                           <HBox.margin>
+                              <Insets left="5.0" top="5.0" />
+                           </HBox.margin>
+                        </Button>
+                                    <Button fx:id="cancelBtn" mnemonicParsing="false" onAction="#cancel" prefWidth="60.0" text="Cancel">
+                           <HBox.margin>
+                              <Insets left="5.0" top="5.0" />
+                           </HBox.margin>
+                        </Button>
+                                </children>
+                            </HBox>
+               </children>
+            </AnchorPane>
+        </items>
+      </SplitPane>
     </children>
 </AnchorPane>
