--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -73,7 +73,7 @@
                                                           <children>
                                                               <FlowPane prefHeight="30.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                   <children>
-                                                                      <Button mnemonicParsing="false" onAction="#retrieveMessages" prefHeight="26.0" prefWidth="122.0" text="Poll Messages">
+                                                                      <Button fx:id="pullMessagesBtn" mnemonicParsing="false" onAction="#retrieveMessages" prefHeight="26.0" prefWidth="122.0" text="Poll Messages">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
@@ -88,7 +88,7 @@
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </Label>
-                                                                      <TextField fx:id="pollTimeTextField" prefHeight="26.0" prefWidth="51.0" text="500">
+                                                                      <TextField fx:id="pollTimeTextField" prefHeight="26.0" prefWidth="60.0" text="5000">
                                                                           <FlowPane.margin>
                                                                               <Insets top="5.0" />
                                                                           </FlowPane.margin>
@@ -98,8 +98,8 @@
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </Label>
-                                                      <ComboBox fx:id="msgPosition" prefHeight="26.0" prefWidth="83.0" promptText="LAST" />
-                                                                      <TextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="45.0" text="100">
+                                                      <ComboBox fx:id="msgPosition" prefHeight="26.0" prefWidth="100.0" promptText="LAST" />
+                                                                      <TextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="60.0" text="1000">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" />
                                                                           </FlowPane.margin>
@@ -147,7 +147,7 @@
                                                          </HBox.margin>
                                                       </Label>
                                                                                                                                                                                       <ComboBox fx:id="valueContentType" prefHeight="26.0" prefWidth="130.0" />
-                                                      <Label prefHeight="17.0" prefWidth="87.0" text="Avro Schema">
+                                                      <Label prefHeight="17.0" prefWidth="87.0" text="Schema">
                                                          <HBox.margin>
                                                             <Insets left="10.0" right="10.0" />
                                                          </HBox.margin>
