--- a/src/main/resources/com/example/mytool/add-message-modal.fxml
+++ b/src/main/resources/com/example/mytool/add-message-modal.fxml
@@ -15,37 +15,78 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import org.fxmisc.richtext.CodeArea?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.AddOrViewMessageModalController">
+<AnchorPane prefHeight="489.0" prefWidth="695.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mytool.ui.controller.AddOrViewMessageModalController">
     <children>
-      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="498.0" prefWidth="687.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
-              <TabPane prefHeight="384.0" prefWidth="593.0" tabClosingPolicy="UNAVAILABLE">
+              <TabPane prefHeight="385.0" prefWidth="634.0" tabClosingPolicy="UNAVAILABLE">
                   <tabs>
                       <Tab text="Contents">
                           <content>
                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                   <children>
-                                      <GridPane layoutY="12.0" prefHeight="332.0" prefWidth="569.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="12.0">
+                                      <GridPane layoutY="12.0" prefHeight="398.0" prefWidth="685.0" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="12.0">
                                           <columnConstraints>
-                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="91.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0" minWidth="10.0" prefWidth="478.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="280.0" minWidth="10.0" prefWidth="86.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="556.0" minWidth="10.0" prefWidth="556.0" />
                                           </columnConstraints>
                                           <rowConstraints>
                                               <RowConstraints maxHeight="104.0" minHeight="0.0" prefHeight="54.0" vgrow="SOMETIMES" />
-                                              <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="112.0" vgrow="SOMETIMES" />
-                                    <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="103.0" vgrow="SOMETIMES" />
-                                              <RowConstraints maxHeight="129.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
+                                              <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="118.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="216.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
+                                    <RowConstraints maxHeight="178.0" minHeight="10.0" prefHeight="129.0" vgrow="SOMETIMES" />
+                                              <RowConstraints maxHeight="129.0" minHeight="9.0" prefHeight="34.0" vgrow="SOMETIMES" />
                                           </rowConstraints>
                                           <children>
-                                              <Label text="Key" />
-                                              <Label text="Value" GridPane.rowIndex="1" />
-                                              <TextArea fx:id="keyTextArea" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1" />
-                                              <TextArea fx:id="valueTextArea" prefHeight="108.0" prefWidth="520.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <TextArea fx:id="schemaTextArea" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                    <Label layoutX="10.0" layoutY="114.0" text="Value Schema" GridPane.rowIndex="2" />
-                                    <Label text="Label" GridPane.rowIndex="3" />
-                                    <ComboBox fx:id="valueContentTypeComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                              <Label text="Key">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" />
+                                       </GridPane.margin></Label>
+                                              <TextArea fx:id="keyTextArea" prefHeight="200.0" prefWidth="200.0" wrapText="true" GridPane.columnIndex="1">
+                                       <GridPane.margin>
+                                          <Insets right="5.0" />
+                                       </GridPane.margin></TextArea>
+                                              <CodeArea fx:id="valueTextArea" prefHeight="108.0" prefWidth="520.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1"
+                                             style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" >
+<!--                                                styleClass="text-input"  -->
+
+                                       <GridPane.margin>
+                                          <Insets right="5.0" />
+                                       </GridPane.margin></CodeArea>
+<!--                                     <TextArea fx:id="schemaTextArea" layoutX="59.0" layoutY="69.0" prefHeight="108.0" prefWidth="520.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
+                                    <CodeArea fx:id="schemaTextArea" layoutX="59.0" layoutY="69.0" prefHeight="130.0" prefWidth="551.0"   wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3"
+                                    style="-fx-border-color: lightgray lightgray lightgray lightgray; -fx-background-color: -color-bg-default;" >
+<!--                                    styleClass="text-input"    -->
+
+                                       <GridPane.margin>
+                                          <Insets right="5.0" />
+                                       </GridPane.margin></CodeArea>
+                                    <Label layoutX="10.0" layoutY="114.0" text="Value Schema" GridPane.rowIndex="3">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" />
+                                       </GridPane.margin></Label>
+                                    <Label text="Value Type" GridPane.rowIndex="4">
+                                       <GridPane.margin>
+                                          <Insets left="10.0" />
+                                       </GridPane.margin></Label>
+                                    <ComboBox fx:id="valueContentTypeComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                    <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                                       <children>
+                                                    <Label text="Value">
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding>
+                                          </Label>
+                                          <ComboBox fx:id="valueDisplayTypeComboBox" prefHeight="26.0" prefWidth="92.0">
+                                             <VBox.margin>
+                                                <Insets left="10.0" top="10.0" />
+                                             </VBox.margin>
+                                          </ComboBox>
+                                       </children>
+                                    </VBox>
                                           </children>
                                       </GridPane>
                                   </children>
