--- a/src/main/resources/com/example/mytool/main-view.fxml
+++ b/src/main/resources/com/example/mytool/main-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -29,9 +30,9 @@
    <children>
       <SplitPane dividerPositions="0.29069767441860467" prefHeight="614.0" prefWidth="1271.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
           <items>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="659.0" prefWidth="288.0">
                   <children>
-                      <GridPane layoutX="14.0" layoutY="14.0" prefHeight="482.0" prefWidth="289.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                      <GridPane layoutX="14.0" layoutY="14.0" prefHeight="659.0" prefWidth="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <!--              <columnConstraints>-->
                           <!--                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />-->
                           <!--                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />-->
@@ -62,7 +63,7 @@
               </AnchorPane>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="601.0" prefWidth="857.0">
                   <children>
-                      <TabPane fx:id="tabPane" prefHeight="600.0" prefWidth="820.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-29.0" AnchorPane.topAnchor="0.0">
+                      <TabPane fx:id="tabPane" prefHeight="659.0" prefWidth="980.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <tabs>
                               <Tab fx:id="dataTab" text="Data">
                                   <content>
@@ -74,12 +75,22 @@
                                                           <children>
                                                               <FlowPane prefHeight="30.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                                   <children>
-                                                                      <Button fx:id="pullMessagesBtn" mnemonicParsing="false" onAction="#retrieveMessages" prefHeight="26.0" prefWidth="122.0" text="Poll Messages">
+                                                      <ProgressIndicator fx:id="isPollingMsgProgressIndicator" prefHeight="31.0" prefWidth="26.0" visible="false">
+                                                         <FlowPane.margin>
+                                                            <Insets left="10.0" top="5.0" />
+                                                         </FlowPane.margin>
+                                                      </ProgressIndicator>
+                                                                      <Button fx:id="pullMessagesBtn" mnemonicParsing="false" onAction="#pollMessages" text="Poll Msgs">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </Button>
-                                                                      <Button mnemonicParsing="false" onAction="#addMessage" text="Add Message">
+                                                      <CheckBox fx:id="isLiveUpdateCheckBox" mnemonicParsing="false" text="Live Update">
+                                                         <FlowPane.margin>
+                                                            <Insets left="10.0" top="5.0" />
+                                                         </FlowPane.margin>
+                                                      </CheckBox>
+                                                                      <Button mnemonicParsing="false" onAction="#addMessage" text="Add Msg">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
@@ -99,23 +110,23 @@
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </Label>
-                                                      <ComboBox fx:id="msgPosition" prefHeight="26.0" prefWidth="100.0" promptText="LAST" />
+                                                      <ComboBox fx:id="msgPosition" promptText="LAST" />
                                                                       <TextField fx:id="maxMessagesTextField" prefHeight="26.0" prefWidth="60.0" text="1000">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" />
                                                                           </FlowPane.margin>
                                                                       </TextField>
-                                                                      <Label text="AfterTimestamp">
+                                                                      <Label text="After">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </Label>
-                                                                      <DateTimePicker fx:id="timestampPicker" prefWidth="200.0">
+                                                                      <DateTimePicker fx:id="timestampPicker" prefWidth="180.0">
                                                                           <FlowPane.margin>
-                                                                              <Insets left="10.0" top="5.0" />
+                                                                              <Insets left="10.0" right="10.0" top="5.0" />
                                                                           </FlowPane.margin>
                                                                       </DateTimePicker>
-                                                                      <Button fx:id="countMessagesBtn" mnemonicParsing="false" onAction="#countMessages" text="Count Messages">
+                                                                      <Button fx:id="countMessagesBtn" mnemonicParsing="false" onAction="#countMessages" text="Count Msgs">
                                                                           <FlowPane.margin>
                                                                               <Insets left="10.0" top="5.0" />
                                                                           </FlowPane.margin>
@@ -170,9 +181,9 @@
                                                                         <columns>
                                                                             <TableColumn prefWidth="75.0" text="Partition" />
                                                                             <TableColumn prefWidth="75.0" text="Offset" />
-                                                                            <TableColumn prefWidth="75.0" text="Key" />
-                                                                            <TableColumn prefWidth="75.0" text="Value" />
-                                                                            <TableColumn prefWidth="75.0" text="Timestamp" />
+                                                                            <TableColumn prefWidth="141.0" text="Key" />
+                                                                            <TableColumn prefWidth="443.0" text="Value" />
+                                                                            <TableColumn prefWidth="242.0" text="Timestamp" />
                                                                         </columns>
                                                                     </TableView>
                                                    </children>
@@ -329,6 +340,6 @@
               </AnchorPane>
           </items>
       </SplitPane>
-      <ProgressIndicator fx:id="msgTableProgressInd" minHeight="-Infinity" minWidth="-Infinity" prefHeight="614.0" prefWidth="1279.0" visible="false" />
+      <ProgressIndicator fx:id="blockAppProgressInd" minHeight="-Infinity" minWidth="-Infinity" prefHeight="614.0" prefWidth="1279.0" visible="false" />
    </children>
 </AnchorPane>
